Fixed some spacing issues with center-content. Decided that the layout page will only include the sidebar. Home.html will have a footer on the side and all other pages without the suggestion section will have a footer on the bottom.

--- a/social_app/static/style.scss
+++ b/social_app/static/style.scss
@@ -66,7 +66,7 @@ main {
   html {
     background-color: $alt-color-3;
   }
-  header, main, footer {
+  header, main {
     color: $light-color-2;
     background-color: $alt-color-3;
     transition: background-color 1s, color 1s;
@@ -85,7 +85,7 @@ main {
       }
     }
   }
-  .left-content, .center-content {
+  .left-content {
     background-color: $alt-color-3-content;
   }
 }
@@ -151,7 +151,7 @@ hr.rounded {
   border-left: 4px solid  black;
   padding-bottom: 25px;
   background-color: $light-color-3-content;
-  width: 250px;
+  width: 350px;
   height: 100%;
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
@@ -235,9 +235,10 @@ hr.rounded {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  gap: 30px;
+  gap: 80px;
   width: 100%;
-  margin: 16px 10px 16px 400px;
+  // margin: 16px 16px 16px 300px;
+  margin: 16px 100px 16px 300px;
   padding: 0 15px;
 }
 .home-posts{
@@ -284,7 +285,7 @@ hr.rounded {
   max-width: 80%;
 }
 .post-content {
-  border: 4px solid  purple;
+    background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -329,9 +330,8 @@ footer {
   gap: 15px;
 }
 .top-footer {
-
   ul {
-    list-style-type: none;
+    list-style: circle;
     margin: 0;
     padding: 0;
   }
